--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,17 +1,17 @@
-name: SimpleHealthBar
-main: de.themoep.SimpleHealthBar.SimpleHealthBar
+name: SimpleHealthBars
+main: de.themoep.SimpleHealthBars.SimpleHealthBars
 version: 0.1.3
 description: Lets you display healthbars for mobs
 authors: [Phoenix616]
-website: https://github.com/Phoenix616/SimpleHealthBar
+website: https://github.com/Minebench/SimpleHealthBars
 commands:
-   simplehealthbar:
+   simplehealthbars:
       aliases: [shb]
       description: Adminstrative Command (reloading)
       usage: /<command>
       permission: simplehealthbar.command
       permission-message: You don't have the permission <permission>
 permissions:
-   simplehealthbar.command:
+   simplehealthbars.command:
       description: Gives permission to the simplehealthbar command
       default: op
