--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>die.themoep</groupId>
+    <groupId>de.themoep</groupId>
     <artifactId>SimpleHealthBars</artifactId>
     <version>0.1.3-SNAPSHOT</version>
     <description>Bukkit plugin to add health bars to mobs via custom names.</description>
